@@ -25,6 +25,8 @@ documents those changes that are of interest to users and administrators.
     are free.
  -- When removing a partition make sure it isn't part of a reservation.
  -- Fix seg fault if loading attempting to load non-existent burstbuffer plugin.
+ -- Fix to backfill scheduling with respect to QOS and association limits. Jobs
+    submitted to multiple partitions are most likley to be effected.
 
 * Changes in Slurm 17.02.2
 ==========================
@@ -404,6 +406,8 @@ documents those changes that are of interest to users and administrators.
  -- ALPS - Fix scheduling when ALPS doesn't agree with Slurm on what nodes
     are free.
  -- Fix seg fault if loading attempting to load non-existent burstbuffer plugin.
+ -- Fix to backfill scheduling with respect to QOS and association limits. Jobs
+    submitted to multiple partitions are most likley to be effected.
 
 * Changes in Slurm 16.05.10-2
 =============================
